# VRenderer

./: .gitignore  CMakeLists.txt
include/Profiler/: Profiler.cpp  Profiler.h
include/VG/: Buffer.h  CmdBuffer.h  CmdPool.h  ComputePipeline.h  DescriptorPool.h  DescriptorSet.h  Device.h  Enums.h  Flags.h  FormatInfo.h  Framebuffer.h  GraphicsPipeline.h  Handle.h  Image.h  ImageView.h  Instance.h  MemoryManager.h  PipelineCache.h  PipelineLayout.h  QueryPool.h  Queue.h  RenderPass.h  Sampler.h  Shader.h  Span.h  Structs.h  Subpass.h  Surface.h  Swapchain.h  Synchronization.h  VG.h  Window.h  spirv_reflect.h
lib/: VGraphics.lib
src/: BufferArray.h  Components.cpp  Components.h  DepthPyramid.cpp  DepthPyramid.h  ECS.h  GPUDrivenRendererSystem.cpp  GPUDrivenRendererSystem.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  RenderBuffer.cpp  RenderBuffer.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  Settings.h
src/shaders/: ClearInstructions.comp  Reduction.comp  Renderer.comp  passthrough.vert  reduction.frag  reduction.vert  shader.frag  shader.vert  shader1.frag  shader1.vert
tests/: RendererTest.cpp  Source.cpp
